# errormake

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md
src/: .lib.rs.swp  lib.rs
